added public profile key to web profiles view and private key if the current logged user is admin modified score submit to receive the public profile key to register it with the score, if not received it registers None modified query handler to return the socre public profile key as part of the returned json.

--- a/src/game.html
+++ b/src/game.html
@@ -5,6 +5,7 @@
   		<thead>
   			<tr>
   				<td>Name</td>
+  				<td>PublicProfileKey</td>
   				<td>TAGS</td>
   				<td>POINTS</td>
   				<td>TIMESTAMP</td>
@@ -15,6 +16,7 @@
   			{% for score in scores %}
   				<tr>
   					<td>{{score.name}}</td>
+  					<td>{{score.profilePublicKey}}</td>
   					<td>{{score.tags}}</td>
   					<td>{{score.points}}</td>
   					<td>{{score.timestamp}}</td>
@@ -25,3 +27,4 @@
   	</table>
   </body>
 </html>
+
