added a DateTimeProperty lastAccess to profile structure updated when the profile is created, name modified or a new score is submitted for that profile

--- a/src/profileList.html
+++ b/src/profileList.html
@@ -15,7 +15,7 @@
       {% if admin %}
             {{profile.privateKey}} - 
       {% endif %}
-      {{profile.publicKey}} - {{profile.name}} - {{profile.guest}} 
+      {{profile.publicKey}} - {{profile.name}} - {{profile.guest}} - {{profile.lastAccess}}
       <br />
     {% endfor %}
     
